finish spells, villager houses and other fixes